--- a/bot.yml
+++ b/bot.yml
@@ -1,5 +1,5 @@
-name: Beepboop Starterbot
-description: A simple Python bot sample for Beep Boop
+name: TTT Tester
+description: A simple Python bot sample for Tic Tac Toe
 avatar: resources/avatar.png
 background: resources/background.png
 config:
