--- a/bot.yml
+++ b/bot.yml
@@ -1,4 +1,4 @@
-name: TTT Tester
+name: TTT Test
 description: A simple Python bot sample for Tic Tac Toe
 avatar: resources/avatar.png
 background: resources/background.png
